# zephyr_io

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  README.md
.github/: README_COVERAGE.md
.github/actions/setup-packet-io/: action.yml
.github/actions/setup-zephyr-modules/: action.yml
.github/workflows/: coverage.yml  docs.yml  flow_tests.yml  module-coverage.yml  module-tests.yml  packet_io_tests.yml  register_mapper_coverage.yml  register_mapper_tests.yml  reusable-coverage.yml  reusable-test.yml  swift_io_tests.yml  test_and_coverage.yml
docs/: conf.py  core.rst  index.rst  method.rst  observable.rst  packet.rst
docs/_static/latex/: title.tex
flow/: CMakeLists.txt  Kconfig  README.md
flow/doc/: index.rst
flow/samples/basic_packet_routing/: CMakeLists.txt  README.md  prj.conf  sample.yaml
flow/samples/router_sample/: CMakeLists.txt  Kconfig  README.md  prj.conf  tcp_client.py  testcase.yaml
flow/samples/router_sample/pytest/: conftest.py  test_router_tcp.py
flow/samples/router_sample/src/: cmd_handler.c  cmd_handler.h  main.c  protocol.c  protocol.h  sensors.c  sensors.h  tcp_server.c  tcp_server.h
flow/samples/router_sample/src/modules/: led_controller.c  led_controller.h  system_control.c  system_control.h  tcp_server.c  tcp_server.h  temperature_sensor.c  temperature_sensor.h
flow/samples/router_sample/src/protocols/: iotsense_router.c  iotsense_router.h
flow/subsys/flow/: CMakeLists.txt  Kconfig  flow.c  flow_runtime.c  sections-rom.ld
flow/subsys/flow_router/: CMakeLists.txt  Kconfig  flow_router.c
flow/zephyr/: module.yml
include/weave/: method.h  observable.h
libs/weave/: README.md  sections-rom.ld
libs/weave/docs/: conf.py  core.rst  index.rst  (+1 more)
packet_io/: CMakeLists.txt  Kconfig  README.md
packet_io/doc/: index.rst
packet_io/samples/router_sample/: CMakeLists.txt  README.md  overlay-native.conf  prj.conf  sections-rom.ld  tcp_client_demo.py  testcase.yaml
packet_io/samples/router_sample/pytest/: test_router_tcp.py
packet_io/samples/router_sample/src/: iotsense_router.c  iotsense_router.h  main.c
packet_io/samples/router_sample/src/framework/: packet_router.c  packet_router.h
packet_io/samples/router_sample/src/lib/: packet_router.c  packet_router.h
packet_io/samples/router_sample/src/modules/: led_controller.c  led_controller.h  system_control.c  system_control.h  tcp_server.c  tcp_server.h  temperature_sensor.c  temperature_sensor.h
packet_io/samples/router_sample/src/protocols/: iotsense_router.c  iotsense_router.h
packet_io/zephyr/: module.yml
register_mapper/: CMakeLists.txt  README.md
register_mapper/doc/: index.rst
register_mapper/samples/device_config/: CMakeLists.txt  prj.conf  sample.yaml
register_mapper/samples/device_config/src/: main.c  motor_module.c  motor_module.h  register_map.c  sensor_module.c  sensor_module.h  uart_handler.c  uart_handler.h
register_mapper/tests/subsys/register_mapper/unit_test/: CMakeLists.txt  prj.conf  testcase.yaml
register_mapper/tests/subsys/register_mapper/unit_test/src/: main.c  test_advanced.c  test_basic.c  test_concurrency.c
register_mapper/zephyr/: module.yml
samples/memslab_core/: CMakeLists.txt  prj.conf
samples/observable/: sample.yaml
samples/packet_routing/: prj.conf  testcase.yaml
samples/sensor_rpc/: CMakeLists.txt  prj.conf  sample.yaml
samples/settings_registers/: CMakeLists.txt  prj.conf
samples/settings_registers/pytest/: test_settings_registers.py
samples/settings_registers/src/: main.c  motor_settings.c  network_settings.c  network_settings.h
samples/settings_table/: CMakeLists.txt  prj.conf  sample.yaml  sections-rom.ld
samples/settings_table/pytest/: test_settings_shell.py
samples/settings_table/src/: main.c  motor_settings.c  sensor_settings.c  settings_api.c  settings_api.h  settings_shell.c
scripts/: build_docs.sh  generate_compile_commands.sh  generate_coverage.sh  generate_coverage_register_mapper.sh  generate_flow_coverage.sh  generate_packet_io_coverage.sh  generate_swift_io_coverage.sh  generate_weave_coverage.sh  run_flow_tests.sh  run_packet_io_tests.sh  run_register_mapper_tests.sh  run_swift_io_tests.sh  run_tests.sh  run_weave_tests.sh
scripts/pylib/pytest-test-harness/: README.md  setup.cfg
scripts/pylib/pytest-test-harness/src/test_harness/: __init__.py  plugin.py
scripts/pylib/pytest-test-harness/src/test_harness/fixtures/: __init__.py  flash.py  http.py  tcp.py  udp.py
scripts/pylib/pytest-zephyr-io-harness/: README.md  setup.cfg
scripts/pylib/pytest-zephyr-io-harness/src/zephyr_io_harness/: __init__.py  fixtures.py  plugin.py
src/: method.c  observable.c
swift_io/: CMakeLists.txt  Kconfig  README.md
swift_io/doc/: index.rst
swift_io/zephyr/: module.yml
weave/: CMakeLists.txt  Kconfig  README.md
weave/tests/subsys/weave/unit_test/: CMakeLists.txt  prj.conf  testcase.yaml
weave/tests/subsys/weave/unit_test/src/: test_common.c  test_common.h  test_concurrency.c  test_error_paths.c  test_init.c  test_memory.c  test_message_processing.c  test_method_calls.c  test_signals.c  test_stress.c  test_timeouts.c
weave/zephyr/: module.yml
zephyr/: module.yml
(+193 files in other folders)
