[metadata]
name = pytest-test-harness
version = attr: test_harness.__version__
description = Pytest plugin for hardware testing fixtures
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    pytest>=7.0.0
    requests>=2.28.0
# Note: pytest-twister-harness is required but installed from Zephyr tree

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    test_harness = test_harness.plugin
